이미지 업로드 API DB연동